--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
@@ -41,10 +42,11 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/fbLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:backgroundTint="@android:color/black"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <TextView
             android:id="@+id/textView3"
@@ -72,7 +74,9 @@
             android:paddingLeft="50dp"
             android:paddingRight="50dp"
             android:text="I love the content"
+            android:textAlignment="viewStart"
             android:textColor="@android:color/darker_gray"
+            android:textColorLink="@android:color/darker_gray"
             android:textSize="24sp" />
 
         <Button
@@ -82,8 +86,10 @@
             android:layout_gravity="center"
             android:layout_marginTop="250dp"
             android:width="500dp"
-            android:height="50dp"
-            android:text="Submit" />
+            android:height="75dp"
+            android:text="Submit"
+            android:textSize="25sp"
+            android:textStyle="bold" />
     </FrameLayout>
 
 </FrameLayout>
