--- a/app/src/main/res/layout-v21/activity_fullscreen.xml
+++ b/app/src/main/res/layout-v21/activity_fullscreen.xml
@@ -1,5 +1,4 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
@@ -15,11 +14,9 @@
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:adjustViewBounds="false"
-        android:padding="0dp"
         android:scaleType="centerCrop"
         android:src="@drawable/bg" />
 
@@ -36,7 +33,7 @@
         <!--android:id="@+id/fullscreen_content_controls"-->
         <!--style="?metaButtonBarStyle"-->
         <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
         <!--android:layout_gravity="bottom|center_horizontal"-->
         <!--android:background="@color/black_overlay"-->
         <!--android:orientation="vertical"-->
@@ -47,7 +44,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-
             android:foregroundGravity="center"
             android:visibility="invisible" />
 
